adding delete buttons

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -25,9 +25,12 @@
       <tbody>
         <% for(let url in urls) { %>
           <tr>
+            <form method="POST" action="/urls/<%= url %>/delete">
             <td><%= url %></td>
             <td><%= urls[url] %></td>
+            <td><button type="submit" class="btn btn-outline-danger">Delete</button></td>
           </tr>
+        </form>
         <% } %>
       </tbody>
     </table>
