--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -25,12 +25,14 @@
       <tbody>
         <% for(let url in urls) { %>
           <tr>
-            <form method="POST" action="/urls/<%= url %>/delete">
+            
             <td><%= url %></td>
             <td><%= urls[url] %></td>
-            <td><button type="submit" class="btn btn-outline-danger">Delete</button></td>
+           
+            <td><form method="GET" action="/urls/<%= url %>"><button type="submit" class="btn btn-outline-primary">Edit</button></td></form>
+            <td><form method="POST" action="/urls/<%= url %>/delete"><button type="submit" class="btn btn-outline-danger">Delete</button></td></form>
           </tr>
-        </form>
+        
         <% } %>
       </tbody>
     </table>
