adding login/logout

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -10,5 +10,18 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
     </div>
+            <% if(username){ %>
+                <p>Login As:<%= username %></p>
+                <form method="POST" action="/logout">
+                  <button type="submit" class="btn btn-primary">Logout</button></form>
+                  <% } else{ %>  
+                <form method="POST" action="/login">
+                  <input class="form-control" type="text" name="username" placeholder="Username2" style="
+    float: left;
+    width: 200px;
+    margin-right: 10px;
+">
+                  <button type="submit" class="btn btn-primary">Login</button></form>
+                 <% } %>
   </nav>
 </header>
