--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -17,11 +17,14 @@
                   <% } else{ %>  
                 <form method="POST" action="/login">
                   <input class="form-control" type="text" name="username" placeholder="Username2" style="
-    float: left;
-    width: 200px;
-    margin-right: 10px;
-">
-                  <button type="submit" class="btn btn-primary">Login</button></form>
+                      float: left;
+                      width: 200px;
+                      margin-right: 10px;
+                  ">
+                  <button type="submit" class="btn btn-primary">Login</button>
+                  <a class="nav-item nav-link" href="/register">Register</a>
+                </form>
                  <% } %>
   </nav>
 </header>
+
