--- a/views/urls_register.ejs
+++ b/views/urls_register.ejs
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <% include partials/_headers %>
+   <title>TinyApp - Account Registration</title>
+
   </head>
   <body>
+   <%- include('partials/_header') %>
 
-    <form method="POST" action="/register">
-      <label for="email">email:</label>
-      <input id="email" name="email" type="email">
-      <label for="password">password:</label>
-      <input id="password" name="password" type="password">
-      <input type="submit" value="Sign Up">
-    </form>
+   <main style="margin: 1em;">
+      <h3>Create An Account</h3>
+      <form action="/register" method="POST">
+        <div class="form-group mb-2" style="margin: 0px 0px 0px 10px;">
+          <label for="email" style="margin: 0px 0px 5px 10px;">Enter your e-mail address: </label>
+          <input class="form-control" type="email" name="email" placeholder="name@domain.com" style="width: 250px; margin: 0px 0px 10px 10px;">
+
+          <label for="password" style="margin: 0px 0px 0px 10px;">Create your password: </label>
+          <input class="form-control" type="password" name="password" style="width: 250px; margin: 0px 0px 10px 10px;">
+          <button type="submit" class="btn btn-primary" style="margin: 0px 0px 0px 10px;">Register</button>
+        </div>
+      </form>
+    </main>
   </body>
 </html>
