--- a/views/urls_login.ejs
+++ b/views/urls_login.ejs
@@ -1,16 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <% include partials/_headers %>
+   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+  <title>TinyApp</title>
+   
   </head>
   <body>
 
-    <form method="POST" action="/login">
-      <label for="email">email:</label>
-      <input id="email" name="email" type="email">
-      <label for="password">password:</label>
-      <input id="password" name="password" type="password">
-      <input type="submit" value="Log In">
-    </form>
-  </body>
+   <%- include('partials/_header') %>
+
+   <main style="margin: 1em;">
+     <h3>Login</h3>
+     <form action="/login" method="POST">
+       <div class="form-group mb-2" style="margin: 0px 0px 0px 10px;">
+         <label for="email" style="margin: 0px 0px 5px 10px;">Email address: </label>
+         <input class="form-control" type="email" name="email" placeholder="Enter E'ID" style="width: 250px; margin: 0px 0px 20px 10px;">
+
+         <label for="password" style="margin: 0px 0px 0px 10px;">Enter your password: </label>
+         <input class="form-control" type="password" name="password" placeholder="Enter PWD"  style="width: 250px; margin: 0px 0px 10px 10px;">
+         <button type="submit" class="btn btn-primary" style="margin: 0px 0px 0px 10px;">Login</button>
+       </div>
+     </form>
+   </main>
+     <!-- Bootstrap JS -->
+   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+ </body>
 </html>
+
+   
